--- a/SlateMate_Classifier.ipynb
+++ b/SlateMate_Classifier.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPT2rP/y/rFWlcHI+rJNEMB",
+      "authorship_tag": "ABX9TyMBWSBHb1rK3KSvi/CKis87",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Hf9vDEVB7gQs",
         "outputId": "f96ef532-a083-4aff-d910-5a84af6ff34c"
@@ -217,7 +216,7 @@
       "metadata": {
         "id": "CkjIFFqa7kVk"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +232,7 @@
         "id": "p-PpCQCY7n3M",
         "outputId": "a85a9bfa-b524-4b40-d240-6ff503afb4cb"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,14 +594,14 @@
       "metadata": {
         "id": "gruZHat47nrV"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#Compute Toxicity Score\n",
-        "print(\"🔍 Calculating toxicity scores...\")\n",
+        "print(\"Calculating toxicity scores...\")\n",
         "tox_model = Detoxify('original')\n",
         "df['toxicity_score'] = df['post_text'].apply(lambda text: tox_model.predict(text)['toxicity'])\n"
       ],
@@ -613,7 +612,7 @@
         "id": "XfmsUAsg7yOY",
         "outputId": "7faab07a-4c59-420b-80b8-d032c3323687"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,7 +641,7 @@
       "metadata": {
         "id": "GFlAK83j7x0C"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -664,7 +663,7 @@
       "metadata": {
         "id": "odnjHnML72fL"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -685,7 +684,7 @@
       "metadata": {
         "id": "cGwEFvyr72PH"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +705,7 @@
       "metadata": {
         "id": "9Ngn0zvhttOw"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -741,7 +740,7 @@
       "metadata": {
         "id": "ebvf4ngBvdzH"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -750,7 +749,7 @@
         "#Export Results\n",
         "output_df = df[['post_id', 'post_text', 'toxicity_score', 'final_label', 'reason']]\n",
         "output_df.to_csv(\"moderated_feed.csv\", index=False)\n",
-        "print(\"✅ Saved results to 'moderated_feed.csv'\")\n"
+        "print(\"Saved results to 'moderated_feed.csv'\")\n"
       ],
       "metadata": {
         "colab": {
@@ -759,7 +758,7 @@
         "id": "VvXFPQMU_-RU",
         "outputId": "7aab784b-da54-4191-866d-e80d63e93166"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -788,7 +787,7 @@
         "id": "uygUGjg8AAha",
         "outputId": "ad5d8192-88fd-4990-c3b0-c0effdd7a8e4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
